# food-delivery-api

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yaml  pyproject.toml
data/: food_delivery.db
data/preload/: menus.json  restaurants.json  schedules.json
food_api/data/preload/: menus.json
food_api/src/core/: config.py
food_api/src/reader/: __init__.py  json.py
food_api/src/schemas/: __init__.py  category.py  restaurant.py  schedule.py
src/: main.py
src/api/: __init__.py
src/api/category/: router.py
src/api/menu/: responses.py  router.py
src/api/order/: router.py
src/api/places/: router.py
src/api/restaurants/: router.py
src/core/: config.py
src/repository/: __init__.py  category_repository.py  database.py  menu_item_repository.py  models.py  order_repository.py  restaurat_repository.py  schedule_repository.py  setup.py
src/scheduler/: __init__.py  status_update.py
src/schemas/: database_types.py  menu_items.py  order.py  restaurant.py
