[tool.poetry]
name = "food-delivery-api"
version = "0.1.0"
description = "API for food delivery service"
authors = ["FranChesK0"]
license = "MIT"
readme = "README.md"
packages = [{ "include" = "src", "from" = "food_api" }]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
packages = [{ "include" = "src", "from" = "food_api" }]
