[tool.poetry]
name = "food-delivery-api"
version = "0.1.0"
description = "API for food delivery service"
authors = ["FranChesK0"]
license = "MIT"
readme = "README.md"
packages = [
  { "include" = "src", "from" = "." },
  { "include" = "tests", "from" = "." },
]

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.10.5"
pydantic-settings = "^2.7.1"
ujson = "^5.10.0"
sqlalchemy = "^2.0.37"
aiosqlite = "^0.20.0"
fastapi = "^0.115.6"
loguru = "^0.7.3"
googlemaps = "^4.10.0"


[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
flake8-pyproject = "^1.2.3"
isort = "^5.13.2"
mypy = "^1.14.1"
types-ujson = "^5.10.0.20240515"


[tool.black]
line-length = 90
target-version = ["py312"]

[tool.flake8]
max-line-length = 90
count = true

[tool.isort]
profile = "black"
py_version = 312
line_length = 90
length_sort = true
multi_line_output = 3
include_trailing_comma = true
src_paths = ["src", "tests"]
extend_skip = ["__init__.py"]

[tool.mypy]
mypy_path = "src"
python_version = "3.12"
explicit_package_bases = true
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
show_error_codes = true


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
packages = [
  { "include" = "src", "from" = "." },
  { "include" = "tests", "from" = "." },
]
